--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <head>
 <title>Scratch Snippets | Functional Code Snippets for Scratch</title>
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
