--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <head>
 <title>Scratch Snippets | Functional Code Snippets for Scratch</title>
-<link rel="icon" type="image/png" href="favicon.ico">
+<link rel="icon" type="image/ico" href="favicon.ico">
 
