--- a/index.html
+++ b/index.html
@@ -1,41 +1,117 @@
 <!DOCTYPE html>
-<head>
 <title>Scratch Snippets | Functional Code Snippets for Scratch</title>
 <link rel="icon" type="image/ico" href="favicon.ico">
-  <html>
-    <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-  <div class="container">
-    <a class="navbar-brand" href="#">
-          <img src="http://placehold.it/150x50?text=Logo" alt="">
-        </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+ <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-size: 28px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+#navbar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+.content {
+  padding: 16px;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.sticky + .content {
+  padding-top: 60px;
+}
+</style>
 
-<!-- Page Content -->
-<div class="container">
-  <h1 class="mt-4">Logo Nav by Start Bootstrap</h1>
-  <p>The logo in the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and height of the logo within the HTML or with CSS. For best results, use an SVG image as your logo.</p>
+</head>
+<body>
+<div class="header">
+  <h2>Scroll Down</h2>
+  <p>Scroll down to see the sticky effect.</p>
 </div>
-<!-- /.container -->
+<div id="navbar">
+  <a class="active" href="javascript:void(0)">Home</a>
+  <a href="javascript:void(0)">News</a>
+  <a href="javascript:void(0)">Contact</a>
+</div>
+<div class="content">
+  <h3>Sticky Navigation Example</h3>
+  <p>The navbar will stick to the top when you reach its scroll
+position.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
+definitiones no quo, maluisset concludaturque et eum, altera fabulas
+ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
+Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
+Eum no molestiae voluptatibus.</p>
+</div>
+<script>
+window.onscroll = function() {myFunction()};
+ 
+ var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+} </script>
+</body>
+</html>
