--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Scratch Snippets | Functional Code Snippets for Scratch</title>
-<link rel="icon" type="image/ico" href="favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico" />
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
