--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
   font-size: 17px;
 }
 #navbar a:hover {
-  background-color: #ddd;
+  background-color: #4688e6;
   color: black;
 }
 #navbar a.active {
