--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 }
 #navbar a:hover {
   background-color: #4688e6;
-  color: black;
+  color: white;
 }
 #navbar a.active {
   background-color: #04AA6D;
