--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ body {
 </head>
 <body>
 <div class="header">
-  <h2>Scroll Down</h2>
-  <p>Scroll down to see the sticky effect.</p>
+  <h2>Scratch Snippets</h2>
+  <p>Functional Code Snippets for Scratch</p>
 </div>
 <div id="navbar">
   <a class="active" href="javascript:void(0)">Home</a>
