--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {
   color: white;
 }
 #navbar a.active {
-  background-color: #04AA6D;
+  background-color: #4e97ff;
   color: white;
 }
 .content {
