--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {
   <p>Functional Code Snippets for Scratch</p>
 </div>
 <div id="navbar">
-  <img src="img_girl.jpg" alt="Girl in a jacket" style="width:48px;height:30px;">
+  <img src="/assets/oie_PENOyqF0lL31.png" alt="logo" style="width:48px;height:30px;">
   <a class="active" href="javascript:void(0)">Home</a>
   <a href="javascript:void(0)">News</a>
   <a href="javascript:void(0)">Contact</a>
