--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@ body {
 </div>
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" alt="logo" style="width:103px;height:44px;">
-  <a class="active" href="javascript:void(0)">Home</a>
-  <a href="javascript:void(0)">News</a>
-  <a href="javascript:void(0)">Contact</a>
+  <a class="active" href="https://scratch-snippets.github.io">Home</a>
+  <a href="javascript:void(0)">Snippets</a>
 </div>
 <div class="content">
   <h3>Sticky Navigation Example</h3>
