--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .header {
-  background-color: #f1f1f1;
+  background-color: #f8a738;
   padding: 30px;
   text-align: center;
 }
