--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Scratch Snippets | Functional Code Snippets for Scratch</title>
+<title>Home | Scratch Snippets | Functional Code Snippets for Scratch</title>
 <link rel="shortcut icon" href="favicon.ico" />
 <html>
 <head>
