--- a/Snippets.html
+++ b/Snippets.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<title>Snippets.html | Scratch Snippets | Functional Code Snippets for Scratch</title>
+<title>Snippets | Scratch Snippets | Functional Code Snippets for Scratch</title>
 <link rel="shortcut icon" href="favicon.ico" />
 <html>
 <head>
