--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" alt="logo" style="width:103px;height:44px;">
   <a class="active" href="https://scratch-snippets.github.io">Home</a>
-  <a href="javascript:void(0)">Snippets</a>
+  <a href="snippets.html">Snippets</a>
 </div>
 <div class="content">
   <h3>Sticky Navigation Example</h3>
