--- a/index.html
+++ b/index.html
@@ -62,44 +62,8 @@ body {
   <a href="snippets.html">Snippets</a>
 </div>
 <div class="content">
-  <h3>Sticky Navigation Example</h3>
-  <p>The navbar will stick to the top when you reach its scroll
-position.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
+  <h3>Welcome!</h3>
+<p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>syles</strong> and bookmarklets!<p>
 </div>
 <script>
 window.onscroll = function() {myFunction()};
