--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
 </div>
 <div class="content">
   <h3>Welcome!</h3>
-<p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>syles</strong> and bookmarklets!<p>
+<p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
 </div>
 <script>
 window.onscroll = function() {myFunction()};
