--- a/snippets.html
+++ b/snippets.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <title>Snippets | Scratch Snippets | Functional Code Snippets for Scratch</title>
 <link rel="shortcut icon" href="favicon.ico" />
@@ -63,44 +62,10 @@ body {
   <a href="javascript:void(0)">Snippets</a>
 </div>
 <div class="content">
-  <h3>Sticky Navigation Example</h3>
-  <p>The navbar will stick to the top when you reach its scroll
-position.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-definitiones no quo, maluisset concludaturque et eum, altera fabulas
-ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum.
-Affert laboramus repudiandae nec et. Inciderint efficiantur his ad.
-Eum no molestiae voluptatibus.</p>
+  <h3>Snippets!</h3>
+  <h4>Userscripts</h4>
+  <p><i>None yet, you can request a userscript on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
+
 </div>
 <script>
 window.onscroll = function() {myFunction()};
