--- a/snippets.html
+++ b/snippets.html
@@ -65,7 +65,10 @@ body {
   <h3>Snippets!</h3>
   <h4>Userscripts</h4>
   <p><i>None yet, you can request a userscript on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
-
+  <h4>Userstyles!</h4>
+  <p><i>None yet, you can request a userstyle on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
+  <h4>Bookmarklets!</h4>
+  <p><i>None yet, you can request a bookmarklet on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
 </div>
 <script>
 window.onscroll = function() {myFunction()};
