--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Home | Scratch Snippets | Functional Code Snippets for Scratch</title>
-<link rel="shortcut icon" href="favicon.ico" />
+<link rel="shortcut icon" href="/assets/favicon.ico" />
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
