--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
 </div>
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" alt="logo" style="width:103px;height:44px;">
-  <a href="index.html">Home</a>
+  <a href="https://scratch-snippets.github.io/">Home</a>
   <a href="snippets.html">Snippets</a>
 </div>
 <div class="content">
