--- a/snippets.html
+++ b/snippets.html
@@ -64,7 +64,7 @@ body {
 <div class="content">
   <h3>Snippets!</h3>
   <h4>Userscripts</h4>
-  <p><a href="https://raw.githubusercontent.com/griffpatch/Scratch3-Dev-Tools/master/inject.user.js">Griffpatch Scratch Developer tools</a></p>
+  <p><a href="https://raw.githubusercontent.com/griffpatch/Scratch3-Dev-Tools/master/inject.user.js">Griffpatch Scratch Developer tools</a> <i>Credit to <a href="https://scratch.mit.edu/users/griffpatch">griffpatch for the extension</a></i></p>
   <p><i>Looks like that's it, you can request a userscript on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
   <h4>Userstyles!</h4>
   <p><i>None yet, you can request a userstyle on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
