--- a/snippets.html
+++ b/snippets.html
@@ -60,6 +60,7 @@ body {
   <img src="/assets/oie_PENOyqF0lL31.png" alt="logo" style="width:103px;height:44px;">
   <a href="index.html">Home</a>
   <a href="snippets.html">Snippets</a>
+  <a href="contributors.html">Contributors</a>
 </div>
 <div class="content">
   <h3>Snippets!</h3>
