--- a/contributors.html
+++ b/contributors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Home | Scratch Snippets | Functional Code Snippets for Scratch</title>
+<title>Contributors | Scratch Snippets | Functional Code Snippets for Scratch</title>
 <link rel="shortcut icon" href="/assets/favicon.ico" />
 <html>
 <head>
