--- a/contributors.html
+++ b/contributors.html
@@ -16,6 +16,9 @@ body {
   padding: 30px;
   text-align: center;
 }
+img.logo {
+  vertical-align: text-bottom;
+}
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
@@ -57,7 +60,7 @@ body {
   <p>Functional Code Snippets for Scratch</p>
 </div>
 <div id="navbar">
-  <img src="/assets/oie_PENOyqF0lL31.png" align="left" vertical-align="sub" alt="logo" style="width:107px;height:44px;">
+  <img class="logo" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
   <a href="index.html">Home</a>
   <a href="snippets.html">Snippets</a>
   <a href="contributors.html">Contributors</a>
