--- a/contributors.html
+++ b/contributors.html
@@ -16,7 +16,7 @@ body {
   padding: 30px;
   text-align: center;
 }
-img.logo {
+img.ssl {
   vertical-align: text-bottom;
 }
 #navbar {
@@ -60,7 +60,7 @@ img.logo {
   <p>Functional Code Snippets for Scratch</p>
 </div>
 <div id="navbar">
-  <img class="logo" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
+  <img class="ssl" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
   <a href="index.html">Home</a>
   <a href="snippets.html">Snippets</a>
   <a href="contributors.html">Contributors</a>
