--- a/contributors.html
+++ b/contributors.html
@@ -16,9 +16,6 @@ body {
   padding: 30px;
   text-align: center;
 }
-img.ssl {
-  vertical-align: text-bottom;
-}
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
@@ -60,7 +57,7 @@ img.ssl {
   <p>Functional Code Snippets for Scratch</p>
 </div>
 <div id="navbar">
-  <img class="ssl" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
+  <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
   <a href="index.html">Home</a>
   <a href="snippets.html">Snippets</a>
   <a href="contributors.html">Contributors</a>
