--- a/contributors.html
+++ b/contributors.html
@@ -63,6 +63,9 @@ body {
   <a href="contributors.html">Contributors</a>
 </div>
 <div class="content">
+<!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
+<!-- prettier-ignore-start -->
+<!-- markdownlint-disable -->
  <table>
   <tr>
     <td align="center"><a href="https://scratch.mit.edu/users/brourbeinsus/"><img src="https://avatars.githubusercontent.com/u/79854224?v=4?s=100" width="100px;" alt=""/><br /><sub><b>brourbeinsus</b></sub></a><br /><a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io/commits?author=brourbeinsus" title="Tests">⚠️</a> <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io/commits?author=brourbeinsus" title="Code">💻</a> <a href="#ideas-brourbeinsus" title="Ideas, Planning, & Feedback">🤔</a> <a href="#projectManagement-brourbeinsus" title="Project Management">📆</a></td>
