--- a/contributors.html
+++ b/contributors.html
@@ -73,6 +73,10 @@ body {
     <td align="center"><a href="https://github.com/NotDiamondZ"><img src="https://avatars.githubusercontent.com/u/83427897?v=4?s=100" width="100px;" alt=""/><br /><sub><b>Zack</b></sub></a><br /><a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io/issues?q=author%3ANotDiamondZ" title="Bug reports">🐛</a> <a href="#ideas-NotDiamondZ" title="Ideas, Planning, & Feedback">🤔</a></td>
   </tr>
 </table> 
+<!-- markdownlint-restore -->
+<!-- prettier-ignore-end -->
+
+<!-- ALL-CONTRIBUTORS-LIST:END -->
 <script>
 window.onscroll = function() {myFunction()};
  
