--- a/contributors.html
+++ b/contributors.html
@@ -63,6 +63,7 @@ body {
   <a href="contributors.html">Contributors</a>
 </div>
 <div class="content">
+  <h3>Contributors ✨</h3>
 <!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
 <!-- prettier-ignore-start -->
 <!-- markdownlint-disable -->
