--- a/snippets.html
+++ b/snippets.html
@@ -63,7 +63,7 @@ body {
   <a href="contributors.html">Contributors</a>
 </div>
 <div class="content">
-  <h3>Snippets!</h3>
+  <h3>Snippets ✂</h3>
   <h4>Userscripts</h4>
   <p><a href="https://raw.githubusercontent.com/griffpatch/Scratch3-Dev-Tools/master/inject.user.js">Griffpatch Scratch Developer tools</a> <i>Credit to <a href="https://scratch.mit.edu/users/griffpatch">griffpatch</a> for the extension</a></i></p>
   <p><i>Looks like that's it, you can request a userscript on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
