--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
   <a href="contributors.html">Contributors</a>
 </div>
 <div class="content">
-  <h3>Welcome 拾</h3>
+  <h3>Welcome ✋</h3>
 <p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
 </div>
 <script>
