--- a/snippets.html
+++ b/snippets.html
@@ -64,7 +64,7 @@ body {
 </div>
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
-  <a href="index.html">Home</a>
+  <a href="https://scratch-snippets.github.io">Home</a>
   <a href="snippets.html">Snippets</a>
   <a href="contributors.html">Contributors</a>
 </div>
