--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ body {
 <body>
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
-  <a href="https://scratch-snippets.github.io">Home</a>
-  <a href="snippets.html">Snippets</a>
-  <a href="contributors.html">Contributors</a>
+  <a href="https://scratch-snippets.github.io"><strong>Home</strong></a>
+  <a href="snippets.html"><strong>Snippets</strong></a>
+  <a href="contributors.html"><strong>Contributors</strong></a>
 </div>
 <div class="header">
   <h2>Scratch Snippets</h2>
