--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
-  box-shadow: rgb(0, 0, 0) 0px 0px 10px;
+  box-shadow: rgba(0, 0, 0, 0.50) 0px 0px 10px;
 }
 #navbar a {
   float: left;
