--- a/contributors.html
+++ b/contributors.html
@@ -25,6 +25,7 @@ body {
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
+  box-shadow: rgba(0, 0, 0, 0.50) 0px 0px 10px;
 }
 #navbar a {
   float: left;
