--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ body {
   padding: 30px;
   text-align: center;
 }
+img amogus {
+  vertical-align: middle;
+}
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
@@ -60,7 +63,7 @@ body {
 </head>
 <body>
 <div id="navbar">
-  <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
+  <img class="amogus" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
   <a href="https://scratch-snippets.github.io"><strong>Home</strong></a>
   <a href="snippets.html"><strong>Snippets</strong></a>
   <a href="contributors.html"><strong>Contributors</strong></a>
