--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
   padding: 30px;
   text-align: center;
 }
-img.amogus {
+img.middle {
   vertical-align: middle;
 }
 #navbar {
@@ -63,7 +63,7 @@ img.amogus {
 </head>
 <body>
 <div id="navbar">
-  <img class="amogus" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
+  <img class="middle" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
   <a href="https://scratch-snippets.github.io"><strong>Home</strong></a>
   <a href="snippets.html"><strong>Snippets</strong></a>
   <a href="contributors.html"><strong>Contributors</strong></a>
