--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body {
   text-align: center;
 }
 img.middle { 
+  display: block;
   vertical-align: middle; 
 }
 #navbar {
@@ -63,7 +64,7 @@ img.middle {
 </head>
 <body>
 <div id="navbar">
-  <img class="a" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
+  <img class="middle" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
   <a href="https://scratch-snippets.github.io"><strong>Home</strong></a>
   <a href="snippets.html"><strong>Snippets</strong></a>
   <a href="contributors.html"><strong>Contributors</strong></a>
