--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ img.middle {
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
+  padding: 14px 16px;
   box-shadow: rgba(0, 0, 0, 0.50) 0px 0px 10px;
 }
 #navbar a {
