--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@ body {
   padding: 30px;
   text-align: center;
 }
-img.middle { 
-  display: block;
-  vertical-align: middle;
-  padding: 14px 16px;
-}
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
@@ -65,7 +60,7 @@ img.middle {
 </head>
 <body>
 <div id="navbar">
-  <img class="middle" src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:80.25px;height:33px;">
+  <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:107px;height:44px;">
   <a href="https://scratch-snippets.github.io"><strong>Home</strong></a>
   <a href="snippets.html"><strong>Snippets</strong></a>
   <a href="contributors.html"><strong>Contributors</strong></a>
