--- a/contributors.html
+++ b/contributors.html
@@ -61,7 +61,7 @@ body {
 <body>
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:113px;height:44px;">
-  <a href="https://scratch-snippets.github.io"><strong>Home</strong></a>
+  <a href="/"><strong>Home</strong></a>
   <a href="snippets.html"><strong>Snippets</strong></a>
   <a href="contributors.html"><strong>Contributors</strong></a>
 </div>
