--- a/contributors.html
+++ b/contributors.html
@@ -64,6 +64,7 @@ body {
   <a href="/"><strong>Home</strong></a>
   <a href="snippets.html"><strong>Snippets</strong></a>
   <a href="contributors.html"><strong>Contributors</strong></a>
+  <a href="docs.html"><strong>Docs</strong></a>
 </div>
 <div class="header">
   <h2>Scratch Snippets</h2>
