--- a/docs.html
+++ b/docs.html
@@ -74,8 +74,9 @@ body {
 <div class="content">
   <h3>docs ✏</h3>
   <h2>About</h2>
-  <p>Scratch Snippets is a website that has a list of functional code snippets for the <a href="https://scratch.mit.edu">Scratch Website</a></p>.
+  <p>Scratch Snippets is a website that has a list of functional code snippets for the <a href="https://scratch.mit.edu">Scratch Website.</a></p>
   <p>We have 3 different kinds of snippets on our site: userscripts, user<strong>styles</strong> and bookmarklets!</p>
+  <p>Scratch Snippets is an open source website, and the source code can be found <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Here</a>.</p>
 </div>
 <script>
 window.onscroll = function() {myFunction()};
