--- a/docs.html
+++ b/docs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>docs | Scratch Snippets | Functional Code Snippets for Scratch</title>
+<title>Docs | Scratch Snippets | Functional Code Snippets for Scratch</title>
 <html>
 <head>
 <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon_package_v0.16 2/apple-touch-icon.png">
@@ -72,7 +72,7 @@ body {
 </div>
 
 <div class="content">
-  <h3>docs ✏</h3>
+  <h3>Docs ✏</h3>
   <h4>About</h4>
   <p>Scratch Snippets is a website that has a list of functional code snippets for the <a href="https://scratch.mit.edu">Scratch Website.</a></p>
   <p>We have 3 different kinds of snippets on our site: userscripts, user<strong>styles</strong> and bookmarklets!</p>
