--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@ body {
 <div class="content">
   <h3>Welcome ✋</h3>
 <p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
+<footer>
+  <center>Scratch Snippets© 2021</center>
+</footer>
 </div>
 <script>
 window.onscroll = function() {myFunction()};
