--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ body {
   padding: 30px;
   text-align: center;
 }
+footer {
+  font-size: 11px;
+  padding: 0px 16px;
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
