--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ body {
 }
 footer {
   background-color: #ccc;
-  font-size: 11px;
-  padding: 0px 28px;
+  font-size: 12px;
 }
 #navbar {
   overflow: hidden;
@@ -80,7 +79,7 @@ footer {
   <h3>Welcome ✋</h3>
 <p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
 <footer>
-  <center>Scratch Snippets© 2021</center>
+  <center><p>Scratch Snippets© 2021</p></center>
 </footer>
 </div>
 <script>
