--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ footer {
   <h3>Welcome ✋</h3>
 <p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
 <footer>
+  <center><img src="assets/GitHub-Mark-64px.png"></center>
   <center><p>Scratch Snippets© 2021</p></center>
 </footer>
 </div>
