--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@ body {
   padding: 30px;
   text-align: center;
 }
-footer {
-  background-color: #ccc;
-  font-size: 12px;
-}
 #navbar {
   overflow: hidden;
   background-color: #4e97ff;
@@ -79,8 +75,8 @@ footer {
   <h3>Welcome ✋</h3>
 <p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
 <footer>
-  <center><img src="assets/GitHub-Mark-64px.png" href="https://github.com/Scratch-Snippets/scratch-snippets.github.io"></center>
-  <center><p>Scratch Snippets© 2021</p></center>
+  <center><a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io"><img src="assets/GitHub-Mark-64px.png"></a></center>
+  <center><p style="font-size:12px">Scratch Snippets© 2021</p></center>
 </footer>
 </div>
 <script>
