--- a/docs.html
+++ b/docs.html
@@ -77,6 +77,10 @@ body {
   <p>Scratch Snippets is a website that has a list of functional code snippets for the <a href="https://scratch.mit.edu">Scratch Website.</a></p>
   <p>We have 3 different kinds of snippets on our site: userscripts, user<strong>styles</strong> and bookmarklets!</p>
   <p>Scratch Snippets is an open source website, and the source code can be found <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Here</a>.</p>
+<footer>
+  <center><a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io"><img src="assets/GitHub-Mark-64px.png"></a></center>
+  <center><p style="font-size:12px">Scratch Snippets© 2021</p></center>
+</footer>
 </div>
 <script>
 window.onscroll = function() {myFunction()};
