--- a/contributors.html
+++ b/contributors.html
@@ -88,6 +88,11 @@ body {
 <!-- prettier-ignore-end -->
 
 <!-- ALL-CONTRIBUTORS-LIST:END -->
+</div>
+<footer>
+  <center><a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io"><img src="assets/GitHub-Mark-64px.png"></a></center>
+  <center><p style="font-size:12px">Scratch Snippets© 2021</p></center>
+</footer>
 <script>
 window.onscroll = function() {myFunction()};
  
