--- a/snippets.html
+++ b/snippets.html
@@ -59,6 +59,7 @@ body {
 
 </head>
 <body>
+<!--Navbar-->
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:113px;height:44px;">
   <a href="/"><strong>Home</strong></a>
@@ -66,18 +67,22 @@ body {
   <a href="contributors.html"><strong>Contributors</strong></a>
   <a href="docs.html"><strong>Docs</strong></a>
 </div>
+<!--Header-->
 <div class="header">
   <h2>Scratch Snippets</h2>
   <p>Functional Code Snippets for Scratch</p>
 </div>
-
+<!--Content-->
 <div class="content">
   <h3>Snippets ✂</h3>
+  <!--Userscript list-->
   <h4>Userscripts</h4>
   <p><a href="https://raw.githubusercontent.com/griffpatch/Scratch3-Dev-Tools/master/inject.user.js">Griffpatch Scratch Developer tools</a> <i>Credit to <a href="https://scratch.mit.edu/users/griffpatch">griffpatch</a> for the extension</a></i></p>
   <p><i>Looks like that's it, you can request a userscript on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
+  <!--Userstyle list-->
   <h4>Userstyles!</h4>
   <p><i>None yet, you can request a userstyle on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
+  <!--Bookmarklet list-->
   <h4>Bookmarklets!</h4>
   <p><a href="javascript:(function()%7B%20var%20style%20=%20document.createElement(%27style%27),%20styleContent%20=%20document.createTextNode(%27%5Bclass%5E=%5C%22stage-header_stage-button-icon%5C%22%5D%20%7B%20transform:%20scaleX(-1)%20!important;%20%7D%20%5Bclass%5E=%5C%22target-pane_target-pane%5C%22%5D%20%7B%20-webkit-flex-direction:%20row-reverse%20!important;%20-ms-flex-direction:%20row-reverse%20!important;%20flex-direction:%20row-reverse%20!important;%20%7D%20%5Bdir=%5C%22ltr%5C%22%5D%20%5Bclass%5E=%5C%22target-pane_stage-selector-wrapper%5C%22%5D%20%7B%20margin-left:%200%20!important;%20margin-right:%20calc(0.5rem%20/%202)%20!important;%20%7D%20%5Bdir=%5C%22ltr%5C%22%5D%20%5Bclass%5E=%5C%22sprite-selector_sprite-selector%5C%22%5D%20%7B%20margin-left:%20calc(0.5rem%20/%202)%20!important;%20margin-right:%200%20!important;%20%7D%20%5Bdir=%5C%22rtl%5C%22%5D%20%5Bclass%5E=%5C%22target-pane_stage-selector-wrapper%5C%22%5D%20%7B%20margin-right:%200%20!important;%20margin-left:%20calc(0.5rem%20/%202)%20!important;%20%7D%20%5Bdir=%5C%22rtl%5C%22%5D%20%5Bclass%5E=%5C%22sprite-selector_sprite-selector%5C%22%5D%20%7B%20margin-right:%20calc(0.5rem%20/%202)%20!important;%20margin-left:%200%20!important;%20%7D%20%5Bclass%5E=%5C%22gui_flex-wrapper%5C%22%5D%20%7B%20-webkit-flex-direction:%20row-reverse%20!important;%20-ms-flex-direction:%20row-reverse%20!important;%20flex-direction:%20row-reverse%20!important;%20overflow-x:%20hidden%20!important;%20%7D%20%5Bdir=%5C%22ltr%5C%22%5D%20%5Bclass%5E=%5C%22backpack_backpack-header%5C%22%5D%20%7B%20border-top-right-radius:%200%20!important;%20border-top-left-radius:%200.5rem%20!important;%20%7D%20%5Bdir=%5C%22ltr%5C%22%5D%20%5Bclass%5E=%5C%22blocks_blocks_C530M%5C%22%5D%20.injectionDiv,%20%5Bdir=%5C%22ltr%5C%22%5D%20%5Bclass%5E=%5C%22asset-panel_wrapper%5C%22%5D%20%7B%20border-top-right-radius:%200%20!important;%20border-bottom-right-radius:%200%20!important;%20border-bottom-left-radius:%200.5rem%20!important;%20%7D%20%5Bdir=%5C%22ltr%5C%22%5D%20%5Bclass%5E=%5C%22gui_extension-button-container%5C%22%5D%20%7B%20border-bottom-left-radius:%200.5rem%20!important;%20%7D%20%5Bdir=%5C%22rtl%5C%22%5D%20%5Bclass%5E=%5C%22backpack_backpack-header%5C%22%5D%20%7B%20border-top-left-radius:%200%20!important;%20border-top-right-radius:%200.5rem%20!important;%20%7D%20%5Bdir=%5C%22rtl%5C%22%5D%20%5Bclass%5E=%5C%22blocks_blocks_C530M%5C%22%5D%20.injectionDiv,%20%5Bdir=%5C%22rtl%5C%22%5D%20%5Bclass%5E=%5C%22asset-panel_wrapper%5C%22%5D%20%7B%20border-top-left-radius:%200%20!important;%20border-bottom-left-radius:%200%20!important;%20border-bottom-right-radius:%200.5rem%20!important;%20%7D%20%5Bdir=%5C%22rtl%5C%22%5D%20%5Bclass%5E=%5C%22gui_extension-button-container%5C%22%5D%20%7B%20border-bottom-right-radius:%200.5rem%20!important;%20%7D%20.Popover%20%7B%20z-index:%2040%20!important;%20%7D%27);%20style.appendChild(styleContent%20);%20var%20caput%20=%20document.getElementsByTagName(%27head%27);%20caput%5B0%5D.appendChild(style);%20%7D)();">Display editor stage on the left side</a></p>
   <p><i>Looks like that's it, you can request a bookmarklet on the <a href="https://github.com/Scratch-Snippets/scratch-snippets.github.io">Github repo</a></i></p>
