--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ body {
 
 </head>
 <body>
+<!--Navbar-->
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:113px;height:44px;">
   <a href="/"><strong>Home</strong></a>
@@ -66,11 +67,12 @@ body {
   <a href="contributors.html"><strong>Contributors</strong></a>
   <a href="docs.html"><strong>Docs</strong></a>
 </div>
+<!--Header-->
 <div class="header">
   <h2>Scratch Snippets</h2>
   <p>Functional Code Snippets for Scratch</p>
 </div>
-
+<!--Content-->
 <div class="content">
   <h3>Welcome ✋</h3>
 <p>Welcome to the official Scratch Snippets Site! This is where you can find a collection of code snippets like userscripts, user<strong>styles</strong> and bookmarklets!<p>
