--- a/docs.html
+++ b/docs.html
@@ -59,6 +59,7 @@ body {
 
 </head>
 <body>
+<!--Navbar-->
 <div id="navbar">
   <img src="/assets/oie_PENOyqF0lL31.png" align="left" alt="logo" style="width:113px;height:44px;">
   <a href="/"><strong>Home</strong></a>
@@ -66,11 +67,12 @@ body {
   <a href="contributors.html"><strong>Contributors</strong></a>
   <a href="docs.html"><strong>Docs</strong></a>
 </div>
+<!--Header-->
 <div class="header">
   <h2>Scratch Snippets</h2>
   <p>Functional Code Snippets for Scratch</p>
 </div>
-
+<!--Content-->
 <div class="content">
   <h3>Docs ✏</h3>
   <h4>About</h4>
