joke css because why not

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ body {
 .sticky + .content {
   padding-top: 60px;
 }
+/* joke css, stolen from ocular */
+.titanic {
+  float: none
+}
 </style>
 
 </head>
